--- a/site/app/stylesheets/_community.scss
+++ b/site/app/stylesheets/_community.scss
@@ -85,7 +85,6 @@
   padding-top: 0; 
 
   .submitted {
-    margin-top: -20px;
     font-style: italic;
   }
 }
@@ -136,12 +135,19 @@
   border: 4px solid #000;
 }
 
-.view-user-profile-box .badge { 
-  display: inline-block; 
-  padding: 0 4px;
-  color: #fff; 
-  text-transform: uppercase; 
-  font-size: 11px; 
+.view-user-profile-box {
+  .picture img {
+    max-width: 40px;
+    max-height: 40px;
+  }
+  .badge { 
+    display: inline-block; 
+    padding: 0 4px;
+    color: #fff; 
+    text-transform: uppercase; 
+    font-size: 11px; 
+    float: right;
+  }
 }
 .badge.newbie { background-color: #89aa00; }
 .badge.member { background-color: #fc6b00; }
@@ -266,7 +272,6 @@ html.js fieldset.collapsible .fieldset-wrapper {
 .submitted {
 	font-style: italic;
 	color: #b0b0b0;
-	float: right;
 }
 .comment-text {
 	border: 1px solid #ddd;
