--- a/site/app/views/opensource/download.html.haml
+++ b/site/app/views/opensource/download.html.haml
@@ -13,10 +13,10 @@
       %dd 
         %p The server components that make up OpenShift Origin are collectively known as CrankCase. The source is divided into the following areas:
         %dl
-          %dt.headline= link_to "StickShift", crankcase_source_path_url('stickshift'), :class => "external", :target => "_blank"
-          %dd Central service exposing a REST API for consumers and coordinating with the application container.
+          %dt.headline= link_to "Broker", crankcase_source_path_url('stickshift'), :class => "external", :target => "_blank"
+          %dd Central service exposing a REST API for consumers and coordinating with the application containers (known as nodes).
           %dt.headline= link_to "Messaging System", crankcase_source_path_url('gearchanger'), :class => "external", :target => "_blank"
-          %dd Communication pipeline between StickShift and each application container.
+          %dd Communication pipeline between StickShift and each node.
           %dt.headline= link_to "User Authentication",  crankcase_source_path_url('swingshift'), :class => "external", :target => "_blank"
           %dd A pluggable user authentication component with a default MongoDB implementation.
           %dt.headline= link_to "Domain Name Management", crankcase_source_path_url('uplift'), :class => "external", :target => "_blank"
