--- a/site/app/stylesheets/_variables.scss
+++ b/site/app/stylesheets/_variables.scss
@@ -70,7 +70,7 @@ $takeActionBackground:          #EB0011; /* FIXME: This makes the logo look desa
 $takeActionHighlightBackground: #91010b;
 
 $grayLight:                     #999;
-$grayDark:                      #444;
+$grayDark:                      #2f2f2f;
 $primaryButtonBackground:       #4e9fdd;
 $orange:                        #ffb02e;
 $linkColor:                     #0069d6;
