--- a/site/app/stylesheets/site.scss
+++ b/site/app/stylesheets/site.scss
@@ -664,6 +664,7 @@ h1.ribbon {
       background-color: #434343;
       width: inherit;
       width: -moz-available;
+      box-shadow: none;
     }
     button.search {
       right: 3px;
