--- a/site/app/stylesheets/_community.scss
+++ b/site/app/stylesheets/_community.scss
@@ -36,7 +36,7 @@
   .view-user-profile-box { margin-bottom: 20px; }
 }
 
-.community textarea, .community input {
+.community textarea {
   width: 100%;
 }
 
