--- a/site/app/stylesheets/console/_navbar.scss
+++ b/site/app/stylesheets/console/_navbar.scss
@@ -172,3 +172,218 @@
 @media (min-width: 1200px) {
 }
 
+
+/* nav overwrite bootstrap */		
+.navbar .nav > li > a {
+    border-radius: 3px 3px 0 0;
+    padding: 3px 13px;
+    margin: 2px;
+    color: #999999;
+    float: none;
+    line-height: 19px;
+    padding: 3px 13px;
+    text-decoration: none;
+    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.8);
+}
+.navbar .nav > li > a:hover {
+    background-color: transparent;
+    color: #FFFFFF;
+    text-decoration: none;
+}
+.navbar .nav .active > a, .navbar .nav .active > a:hover {
+  border:0;
+  box-shadow: none;
+  color: #FFFFFF;
+  cursor: pointer;
+  text-decoration: none;
+}		
+.nav-collapse {
+    height: 0;
+    overflow: visible;
+    text-align: center;
+}
+.navbar .nav {
+    display: inline-block;
+    border-color: #383838;
+		border-style: solid solid none;
+    border-width: 2px 2px 0;
+    -moz-border-radius-topleft: 6px;
+  	-moz-border-radius-topright: 6px;
+  	-webkit-border-top-left-radius: 6px;
+  	-webkit-border-top-right-radius: 6px;
+  	border-top-right-radius: 6px;
+  	border-top-left-radius: 6px;
+    float: none;
+    left: 0;
+    margin: 61px 0 0 0;
+    position: relative;
+}
+.navbar .nav > li {
+    background: #000;
+    -moz-border-radius-topleft: 4px;
+  	-moz-border-radius-topright: 4px;
+  	-webkit-border-top-left-radius: 4px;
+  	-webkit-border-top-right-radius: 4px;
+  	border-top-right-radius: 4px;
+  	border-top-left-radius: 4px;
+    display: block;
+    float: left;
+}
+.navbar {
+	background: black url("../images/stars.png") left top repeat-x;
+	border-bottom: 2px solid #383838;
+	height: 90px;
+	margin: 0/*.*/;
+	}
+	.navbar-inner {
+    background-color: transparent;
+    background-image: none;
+    background-repeat: repeat-x;
+    border-radius: 0 0 0 0;
+    padding-left: 20px;
+    padding-right: 20px;
+		}
+.navbar .brand {
+    color: #FFFFFF;
+    display: block;
+    float: left;
+    font-size: 16px;
+    font-weight: 200;
+    line-height: 1;
+    margin: 8px 8px 0 -20px;
+    padding: 8px 20px 12px;
+    text-shadow: 0 1px 2px #000000;
+}		
+		
+.navbar .container {
+	position: relative;
+	}
+.navbar .brand {
+    color: #FFFFFF;
+    float: none;
+    position: absolute;
+    top: 18px;
+    left: 0;
+    font-size: 16px;
+    font-weight: 200;
+    line-height: 1;
+    margin: 0;
+    padding: 0;
+  }
+.navbar .brand a {
+	display: inline-block;
+	vertical-align: middle;
+	}
+	.navbar .brand .navbar-text {
+    font-size: 13px;
+    font-family: Overpass, Helvetica, Arial, sans-serif;
+    text-transform: uppercase;
+    }
+.navbar .navbar-text {
+	color:#fff;
+	margin: 0;
+	} 
+.navbar #utility-nav {
+    margin: 0;
+    background: #000;
+    display: inline;
+    margin: 0 -10px 0 0;
+    position: absolute;
+    top: 1px;
+    right: 0;
+    font-size: 11px;
+}
+#identity {
+	border: 1px solid #383838;
+	-webkit-border-radius: 3px;
+  -moz-border-radius: 3px;  
+  border-radius: 3px; 
+    color: #999999;
+    font-size: 11px;
+    padding: 0 17px 0 8px;
+    position: absolute;
+    right: 0;
+    top: 61px;
+    background: #000 url("../images/console/arrow-down.png") 97% .75em no-repeat;
+	}
+#identity .username {
+    max-width: 150px;
+    overflow: hidden;
+    white-space: nowrap;
+    }
+
+@media (max-width: 767px) {
+	.navbar {
+    height: auto;
+    border: 0;
+    padding-left: 20px;
+	}
+	.navbar .brand {
+		position: relative;
+		}
+	.navbar #utility-nav {
+    margin: 0 10px 0 0;
+    left: -13px;
+    top: 3px;
+    }
+	#identity {
+    top: 2px;
+    right: 20px;
+    }
+	.navbar .nav {
+		display: block;
+		margin: 30px 0 0;
+		float: left;
+		width: 100%;
+		border: 0;
+		}
+	.navbar .nav > li {
+    float: left;
+    width: 24.5%;
+    margin-right: 0.38%;
+	}
+	.navbar .nav > li > a {
+		border-radius: 3px;
+    height: 44px;
+		}
+		.navbar .nav > li:last-child {
+			margin-right: 0;
+			}
+	.navbar .nav .active > a, .navbar .nav .active > a:hover {
+    background-color: #333;
+    border: 0;
+    color: #FFFFFF;
+    cursor: default;
+    text-decoration: none;
+    box-shadow: none;
+	}
+}
+
+
+@media (min-width: 768px) and (max-width: 979px) {
+	.navbar .nav > li {
+    float: left;
+	}
+	.navbar .nav .active > a, .navbar .nav .active > a:hover {
+    border: 0;
+    box-shadow: 0;
+    color: #FFFFFF;
+    cursor: default;
+    text-decoration: none;
+	}
+	.navbar #utility-nav {
+    margin: 0 10px 0 0;
+    right: 175px;
+    top: 3px;
+    }
+	#identity {
+    top: 2px;
+    }
+}
+
+@media (min-width: 1200px) {
+	.navbar .nav {
+		margin-left: 0;
+		}
+}
+
