Tighten up opensource download page

--- a/site/app/stylesheets/_custom.scss
+++ b/site/app/stylesheets/_custom.scss
@@ -203,6 +203,7 @@ textarea:focus {
 		font-size: 26px;
 		}
 	/*FIXME revisit with better names*/
+	.link-column {margin-bottom: 15px !important;}
   .link-column > header { display: inline; }
   .link-column ul { margin-bottom: 5px; }
   .link-column h3,
