--- a/site/app/stylesheets/console/_navbar.scss
+++ b/site/app/stylesheets/console/_navbar.scss
@@ -1,7 +1,11 @@
 /* no longer used, see site/_navbar */
 
 .navbar {
-  margin-bottom: $baseLineHeight;
+	height: 90px;
+	margin: 0/*.*/;
+
+	background: black url("../images/stars.png") left top repeat-x;
+	border-bottom: 2px solid #383838;
 }
 
 .navbar .nav {
@@ -31,7 +35,8 @@
   color: #ffffff;
   text-decoration: none;
 	}
-.navbar .nav .active > a, .navbar .nav .active > a:hover {
+.navbar .nav .active > a, 
+.navbar .nav .active > a:hover {
   color: #ffffff;
   text-decoration: none;
   background-color: #111;
@@ -41,26 +46,44 @@
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.5) inset;
   cursor: default;
 	}
+
 .navbar .brand {	
-	color: #fff;
-  display: block;
-  float: left;
   font-size: 16px;
   font-weight: 200;
-  line-height: 1;
-  margin: 8px 8px 0 -20px;
-  padding: 8px 20px 12px;
+  //line-height: 1;
+
+	color: white;
   text-shadow: 0 1px 2px #000000;
-	}
-.navbar .brand span {
-	white-space: nowrap;
-	}
-.navbar .brand sup {
-	left: -2px;
-  top: -0.75em;
-  font-size: 8px;
-  font-weight: 100;
-	}
+
+  text-transform: uppercase;
+  white-space: nowrap;
+
+  float: none;
+  display: block;
+  position: absolute;
+  top: 18px;
+  left: 0;
+  margin: 0;
+  padding: 0;
+
+  .brand-image {
+    display: inline-block;
+    background: url('../images/logo-24-inside.png') no-repeat left;
+    height: 32px;
+    width: 48px;
+    vertical-align: middle;
+  }
+
+  a {
+    color: white;
+  }
+
+  .navbar-text {
+    //font-size: 13px;
+    text-transform: uppercase;
+  }
+}
+
 .navbar .navbar-text {
   margin: 15px -8px 0 0;
   line-height: 40px;
@@ -71,262 +94,138 @@
 	color: #999;
 	}
 
-#utility-nav li {
-	display: block;
-  float: left;
-  margin-left: 5px;
-	}
-#utility-nav li a {
-  color: #999999;
-	padding: 10px;
-	text-decoration: none;
-	}
-#utility-nav li a:hover {
-  color: #ffffff;
-	}
-
-/* Responsive styles */
-@media (max-width: 767px) {
-  .console-transition .navbar .headline { 
-    display: block;
-    clear: both;
-    }
-  .console-transition .navbar #utility-nav {
-    margin: 0;
-    float: none;
-    }
-}
-
-@media (min-width: 768px) and (max-width: 980px) {
-	
-}
-
-@media (max-width: 980px) { 
-	#utility-nav {
-	  margin: 8px 5px 0 0;
-	 	}
-	.navbar .nav-collapse {
-    clear: left;
-    height: auto; /* override js toggle */
-  	}
-  .navbar .nav {
-    float: none;
-    margin: 0;
-  	}
-  .navbar .nav > li {
-    float: none;
-  	}
-	.navbar .nav > li > a, .navbar .dropdown-menu a {
-    padding: 6px 15px 8px;
-    font-weight: bold;
-    color: #999999;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-  	}
-  .navbar .nav .active > a, .navbar .nav .active > a:hover {
-    background-color: #111111;
-    border-left: 0;
-    border-right: 0;
-    border-top: 0;
-    box-shadow: 0 -1px 0 rgba(255, 255, 255, 0.2) inset, 0 -1px 2px rgba(0, 0, 0, 0.35);
-    color: #FFFFFF;
-    cursor: default;
-    text-decoration: none;
-		}
-  .navbar .nav > li > a:hover, .navbar .dropdown-menu a:hover {
-    background-color: #1a1a1a;
-  	}
-  .console-transition .navbar #utility-nav {
-    margin: 0;
-    float: none;
-    }
-}
-	  
-@media (min-width: 980px) {
-	.nav-collapse.collapse {
-    height: auto !important;
-  	}
-  .navbar .nav > li > a, .navbar .dropdown-menu a {
-  	-webkit-border-radius: 6px 6px 0 0;
-  		 -moz-border-radius: 6px 6px 0 0;
-  			    border-radius: 6px 6px 0 0;
-		}
-}
-
-@media (min-width: 1200px) {
-}
-
 
 /* nav overwrite bootstrap */		
 .navbar .nav > li > a {
-    border-radius: 3px 3px 0 0;
-    padding: 3px 13px;
-    margin: 2px;
-    color: #999999;
-    float: none;
-    line-height: 19px;
-    padding: 3px 13px;
-    text-decoration: none;
-    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.8);
+  @include border-radius(3px 3px 0 0);
+  margin: 2px;
+  color: #999999;
+  float: none;
+  line-height: 19px;
+  padding: 3px 13px;
+  text-decoration: none;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.8);
 }
 .navbar .nav > li > a:hover {
-    background-color: transparent;
-    color: #FFFFFF;
-    text-decoration: none;
+  background-color: transparent;
+  color: #FFFFFF;
+  text-decoration: none;
 }
 .navbar .nav .active > a, .navbar .nav .active > a:hover {
+  @include box-shadow(none);
   border:0;
-  box-shadow: none;
   color: #FFFFFF;
   cursor: pointer;
   text-decoration: none;
 }		
 .nav-collapse {
-    height: 0;
-    overflow: visible;
-    text-align: center;
+  height: 0;
+  overflow: visible;
+  text-align: center;
 }
 .navbar .nav {
-    display: inline-block;
-    border-color: #383838;
-		border-style: solid solid none;
-    border-width: 2px 2px 0;
-    -moz-border-radius-topleft: 6px;
-  	-moz-border-radius-topright: 6px;
-  	-webkit-border-top-left-radius: 6px;
-  	-webkit-border-top-right-radius: 6px;
-  	border-top-right-radius: 6px;
-  	border-top-left-radius: 6px;
-    float: none;
-    left: 0;
-    margin: 61px 0 0 0;
-    position: relative;
+  display: inline-block;
+  border-color: #383838;
+  border-style: solid solid none;
+  border-width: 2px 2px 0;
+  -moz-border-radius-topleft: 6px;
+  -moz-border-radius-topright: 6px;
+  -webkit-border-top-left-radius: 6px;
+  -webkit-border-top-right-radius: 6px;
+  border-top-right-radius: 6px;
+  border-top-left-radius: 6px;
+  float: none;
+  left: 0;
+  margin: 61px 0 0 0;
+  position: relative;
 }
 .navbar .nav > li {
-    background: #000;
-    -moz-border-radius-topleft: 4px;
-  	-moz-border-radius-topright: 4px;
-  	-webkit-border-top-left-radius: 4px;
-  	-webkit-border-top-right-radius: 4px;
-  	border-top-right-radius: 4px;
-  	border-top-left-radius: 4px;
-    display: block;
-    float: left;
+  background: #000;
+  -moz-border-radius-topleft: 4px;
+  -moz-border-radius-topright: 4px;
+  -webkit-border-top-left-radius: 4px;
+  -webkit-border-top-right-radius: 4px;
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
+  display: block;
+  float: left;
 }
-.navbar {
-	background: black url("../images/stars.png") left top repeat-x;
-	border-bottom: 2px solid #383838;
-	height: 90px;
-	margin: 0/*.*/;
-	}
-.navbar .brand {
-    color: #FFFFFF;
-    display: block;
-    float: left;
-    font-size: 16px;
-    font-weight: 200;
-    line-height: 1;
-    margin: 8px 8px 0 -20px;
-    padding: 8px 20px 12px;
-    text-shadow: 0 1px 2px #000000;
-}		
 		
 .navbar .container {
 	position: relative;
 	}
-.navbar .brand {
-    color: #FFFFFF;
-    float: none;
-    position: absolute;
-    top: 18px;
-    left: 0;
-    font-size: 16px;
-    font-weight: 200;
-    line-height: 1;
-    margin: 0;
-    padding: 0;
-  }
-.navbar .brand a {
-	display: inline-block;
-	vertical-align: middle;
-	}
-	.navbar .brand .navbar-text {
-    font-size: 13px;
-    font-family: Overpass, Helvetica, Arial, sans-serif;
-    text-transform: uppercase;
-    }
 .navbar .navbar-text {
 	color:#fff;
 	margin: 0;
 	} 
-.navbar #utility-nav {
-    margin: 0;
-    background: #000;
-    display: inline;
-    margin: 0 -10px 0 0;
-    position: absolute;
-    top: 1px;
-    right: 0;
-    font-size: 11px;
-}
+
 #identity {
 	border: 1px solid #383838;
-	-webkit-border-radius: 3px;
-  -moz-border-radius: 3px;  
-  border-radius: 3px; 
-    color: #999999;
-    font-size: 11px;
-    padding: 0 17px 0 8px;
-    position: absolute;
-    right: 0;
-    top: 61px;
-    background: #000 url("../images/console/arrow-down.png") 97% .75em no-repeat;
-	}
+  @include border-radius(3px);
+  color: #999999;
+  font-size: 11px;
+  background: #000 url("../images/console/arrow-down.png") 97% .75em no-repeat;
+
+  position: absolute;
+  right: 0;
+  top: 35px;
+  padding: 0 17px 0 8px;
+  margin-left: 0;
+}
 #identity .username {
-    max-width: 150px;
-    overflow: hidden;
-    white-space: nowrap;
+  max-width: 150px;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+#utility-nav {
+  background: #000;
+  margin: 0 -10px 0 0;
+  font-size: 11px;
+
+  li {
+  	display: block;
+    float: left;
+    margin-left: 5px;
+
+    a {
+      color: #999999;
+      padding: 10px;
+      text-decoration: none;
+
+      &:hover {
+        color: #ffffff;
+      }
     }
+  }
+}
 
 @media (max-width: 767px) {
 	.navbar {
     height: auto;
     border: 0;
-    padding-left: 20px;
 	}
 	.navbar .brand {
 		position: relative;
-		}
-	.navbar #utility-nav {
-    margin: 0 10px 0 0;
-    left: -13px;
-    top: 3px;
-    }
-	#identity {
-    top: 2px;
-    right: 20px;
-    }
+	}
 	.navbar .nav {
 		display: block;
 		margin: 30px 0 0;
-		float: left;
-		width: 100%;
 		border: 0;
-		}
+	}
 	.navbar .nav > li {
-    float: left;
-    width: 24.5%;
-    margin-right: 0.38%;
+    display: inline-block;
+    margin-right: 4px;
 	}
 	.navbar .nav > li > a {
-		border-radius: 3px;
-    height: 44px;
-		}
-		.navbar .nav > li:last-child {
-			margin-right: 0;
-			}
-	.navbar .nav .active > a, .navbar .nav .active > a:hover {
+    background-color: #131313;
+		@include border-radius(3px);
+	}
+	.navbar .nav > li:last-child {
+		margin-right: 0;
+	}
+	.navbar .nav .active > a, 
+  .navbar .nav .active > a:hover {
     background-color: #333;
     border: 0;
     color: #FFFFFF;
@@ -334,6 +233,12 @@
     text-decoration: none;
     box-shadow: none;
 	}
+
+	#identity {
+    position: static;
+  }
+	#utility-nav {
+  }
 }
 
 
@@ -348,14 +253,10 @@
     cursor: default;
     text-decoration: none;
 	}
-	.navbar #utility-nav {
-    margin: 0 10px 0 0;
-    right: 175px;
-    top: 3px;
-    }
 	#identity {
-    top: 2px;
-    }
+  }
+	#utility-nav {
+  }
 }
 
 @media (min-width: 1200px) {
