--- a/site/app/views/console/help.html.haml
+++ b/site/app/views/console/help.html.haml
@@ -38,7 +38,8 @@
     %h2 Create
     %p
       %strong Just starting with OpenShift?
-    %p Get your first application up off the ground through the application creation wizard.  #{link_to 'Create an app now', application_types_path, :class => 'btn btn-success'}
+    %p Get your first application up off the ground through the application creation wizard.
+    %p #{link_to 'Create an app now', application_types_path, :class => 'btn btn-primary'}
     %p If you prefer the command line, #{link_to 'our Getting Started page', getting_started_path} will help you install the client tools, create your application, and make your first change.
     %p 
       Our #{link_to 'Get Started Fast page', developers_get_started_fast_url} has tutorials for creating apps based many different technologies like 
@@ -71,7 +72,8 @@
     %h2 Engage
     %p 
       %strong Need to know what's new?
-    %p The OpenShift newsletter is a great way to track the latest news. #{link_to 'Subscribe today', newsletter_signup_url, :class => 'btn btn-success'}
+    %p The OpenShift newsletter is a great way to track the latest news.
+    %p #{link_to 'Subscribe today', newsletter_signup_url, :class => 'btn btn-primary'}
     %p OpenShift is #{link_to "powered by open source ", opensource_community_url} and can be #{link_to "run on your laptop", opensource_download_path}. #{link_to "Get involved today", get_involved_url} and help drive our evolution.
     %p Follow us on Twitter at #{link_to '#openshift', openshift_twitter_url} or read the #{link_to 'OpenShift blog', openshift_blog_url}.
     %p If you've found a real humdinger of a problem with the console, site, or community - #{link_to 'file a bug', open_bug_url, :target => '_blank' } and we'll try to make it right.
