--- a/site/app/views/layouts/console/_header.html.haml
+++ b/site/app/views/layouts/console/_header.html.haml
@@ -1,34 +1,5 @@
 .navbar
   .container
-    .brand
-      = link_to root_path do
-        %img.brand-image{:src => image_path('/app/images/logo-24-inside.png')}
-
-      %span.navbar-text.headline 
-        %span.brand-text 
-          %strong> Open
-          Shift
-        | Management Console
-
-    -#= link_to root_path, :class => 'brand' do
-      Open
-      %strong> Shift
-      %span.trademark> &trade;
-      &nbsp;
-      Management Console
-
-    .nav-collapse
-      = navigation_tabs do
-        = navigation_tab :applications, :action => :index, :name => "My Applications"
-        = navigation_tab :application_types, :name => "Create a New Application"
-        = navigation_tab :console, :action => :help, :name => "Help"
-        = navigation_tab :user, :action => :show, :name => "My Account"
-        -#= navigation_tab :help, :show
-
-    %ul.navbar-text.pull-right#utility-nav
-      %li= link_to "Status", status_url, :title => 'Track open issues on the OpenShift status page', :id => 'outage', :class => 'btn btn-warning btn-small', :style => 'display:none;'
-      %li= link_to "Community", community_url
-      %li= link_to "Developer Center", developers_url
 
     %ul#identity.pull-right
       %li.dropdown.username
@@ -37,3 +8,26 @@
         %ul.dropdown-menu
           %li= link_to "My Account", account_path
           %li= link_to "Sign Out", logout_path
+
+    %ul.navbar-text.pull-right#utility-nav
+      %li= link_to "Status", status_url, :title => 'Track open issues on the OpenShift status page', :id => 'outage', :class => 'btn btn-warning btn-small', :style => 'display:none;'
+      %li= link_to "Community", community_url
+      %li= link_to "Developer Center", developers_url
+
+    .brand
+      = link_to root_path do
+        %img.brand-image
+        %span.brand-text.headline
+          %strong> Open
+          Shift
+
+      %span.navbar-text.headline 
+        | Management Console
+
+    .nav-collapse
+      = navigation_tabs do
+        = navigation_tab :applications, :action => :index, :name => "My Applications"
+        = navigation_tab :application_types, :name => "Create a New Application"
+        = navigation_tab :console, :action => :help, :name => "Help"
+        = navigation_tab :user, :action => :show, :name => "My Account"
+        -#= navigation_tab :help, :show
