--- a/site/app/views/applications/show.html.haml
+++ b/site/app/views/applications/show.html.haml
@@ -5,8 +5,8 @@
 
 .console-head.clearfix.base
   %h1.span4= @application.name
-  .span.pull-right
-    %a.btn.btn-danger{:href => delete_application_path(@application.name), :style => 'margin-right:10px'} Delete
+  .pull-right
+    %a.btn.btn-danger{:href => delete_application_path(@application.name), :style => 'margin-right:25px; margin-top: 5px;'} Delete
 -#
   .emblem.span
     %img{:src => '/app/images/console/gear-bars.png'}
