--- a/site/app/views/applications/delete.html.haml
+++ b/site/app/views/applications/delete.html.haml
@@ -10,5 +10,5 @@
     -#= f.input :cartridge, :as => :hidden, :value => @application.framework
   = f.buttons do
     = link_to 'Cancel', @referer || application_path(@application), :class => 'btn'
-    = f.commit_button :label => "Delete", :button_html => {:class => 'btn-danger'}
+    = f.commit_button :label => "Delete", :button_html => {:class => 'btn btn-danger'}
     = f.loading
