--- a/site/app/stylesheets/_buttons.scss
+++ b/site/app/stylesheets/_buttons.scss
@@ -18,16 +18,15 @@
   text-shadow: 0 1px 0 #DFDFDF;
   vertical-align: middle;
   //@include buttonBackground($white, darken($white, 10%)); 
-  //@include border-radius(2px); //4px
+  @include border-radius(0); //4px
   //$shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
   //@include box-shadow($shadow);
   background-image: -moz-linear-gradient(center top , #ddd 10%, #a4a8b0 100%, #c8cad0 100%);
   border-color: rgba(5, 5, 5, 0.1) rgba(5, 5, 5, 0.3) rgba(5, 5, 5, 0.5) rgba(5, 5, 5, 0.3);
   cursor: pointer;
-  border-radius: 0;
   border-style: solid;
   border-width: 1px;
-  text-transform: uppercase;
+  //text-transform: uppercase;
 
   // Give IE7 some love
   @include reset-filter();
@@ -89,7 +88,7 @@
   padding: 9px 14px;
   font-size: $baseFontSize + 2px;
   line-height: normal;
-  @include border-radius(2px); //5px
+  //@include border-radius(2px); //5px
 }
 .btn-large [class^="icon-"] {
   margin-top: 1px;
