--- a/site/app/stylesheets/_responsive.scss
+++ b/site/app/stylesheets/_responsive.scss
@@ -300,9 +300,8 @@
     top: auto;
     left: auto;
     float: none;
-    display: block;
+    display: none;
     max-width: none;
-    margin: 0 15px;
     padding: 0;
     background-color: transparent;
     border: none;
