--- a/site/app/views/layouts/console/_header.html.haml
+++ b/site/app/views/layouts/console/_header.html.haml
@@ -16,13 +16,13 @@
 
     .brand
       = link_to root_path do
-        %img.brand-image
+        %span.brand-image
         %span.brand-text.headline
           %strong> Open
           Shift
 
       %span.navbar-text.headline 
-        | Management Console
+        Management Console
 
     .nav-collapse
       = navigation_tabs do
