Links to live cd Navbar tweaks to fit in small spaces Remove "new" tag on node.js

--- a/site/app/stylesheets/_custom.scss
+++ b/site/app/stylesheets/_custom.scss
@@ -211,7 +211,7 @@ textarea:focus {
   .link-column h5 { display: inline; font-size: 14px; }
   .link-column ul { margin: 0; padding: 0; display: inline; }
   .link-column li { margin: 0; padding: 0; display: inline; list-style-image: none; list-style: none; }
-  .link-column a { margin-left: 5px; text-decoration: underline; }
+  .link-column a { margin-left: 5px; text-decoration: underline; white-space: nowrap}
   .link-column > header a { margin-left: 0; }
 }
 
