--- a/site/app/views/applications/index.html.haml
+++ b/site/app/views/applications/index.html.haml
@@ -53,7 +53,7 @@
           -#%span.span1
             &nbsp;
             -# app type icon placeholder
-          %span.span4.offset1
+          %span.span4
             %h2= application.name
             .app-full-path
               = application.web_url
