Bug 815173 - Set header in drupal to force IE edge mode in devenv.   Ensure that status messages won't be shown for N-1 compat with site   Update copyright colors to be black background   Update copyright date

--- a/site/app/stylesheets/site.scss
+++ b/site/app/stylesheets/site.scss
@@ -696,6 +696,11 @@ h1.ribbon {
   background-color: $contentColumnBackgroundColor;
 }
 
+#copyright {
+  color: #888;
+  background-color: black;
+}
+
 /* Background */
 body > header {
   /* fallback */
