--- a/site/app/views/opensource/download.html.haml
+++ b/site/app/views/opensource/download.html.haml
@@ -49,13 +49,15 @@
       #{link_to "boot it from a USB stick", livecd_wiki_url('boot_usb')}.
     %p
       Then, we suggest you read the
-      = link_to "live image documentation", livecd_wiki_url('next_steps')
+      #{link_to "live image documentation", livecd_wiki_url('next_steps')}
       for instructions on what to do after you boot.
     .well
       %h4 Important Information
       %p
-        This image contains software from Fedora 16.  Corresponding source packages for such software are available at
-        = link_to "http://koji.fedoraproject.org/koji", "http://koji.fedoraproject.org/koji"
+        This image contains software from Fedora 16.  Corresponding source packages for such software are available 
+        at #{link_to "http://koji.fedoraproject.org/koji", "http://koji.fedoraproject.org/koji"}
+      %p 
+        Source packages for OpenShift Origin are available at #{link_to crankcase_srpm_url, crankcase_srpm_url}.
 
 %section.row
   .span12
@@ -111,5 +113,24 @@
     These are some of the projects that are used to create Red Hat's OpenShift Platform-as-a-Service (PaaS), but are not necessarily the versions of code currently used for OpenShift. Red Hat and OpenShift are trademarks of Red Hat, Inc., registered in the United States and other countries. Red Hat's offering of the code for your downloading, use, modification, or distribution is not a grant of a trademark license to OpenShift or any other Red Hat trademark.
   %p
     The components listed above are under the
-    = link_to "Apache Software License 2.0", "http://www.apache.org/licenses/LICENSE-2.0.html", :class => "external", :target => "_blank"
+    = link_to "Apache License 2.0", "http://www.apache.org/licenses/LICENSE-2.0.html", :class => "external", :target => "_blank"
     , except with cartridges listed with a specific license.  See project pages for full text of each project's license.
+  %p
+    This software distribution includes cryptographic software that is
+    subject to the U.S. Export Administration Regulations (the “*EAR*”) and
+    other U.S. and foreign laws and may not be exported, re-exported or
+    transferred (a) to any country listed in Country Group E:1 in Supplement
+    No. 1 to part 740 of the EAR (currently, Cuba, Iran, North Korea,
+    Sudan, and  Syria); (b) to any prohibited destination or to any end user
+    who has been prohibited from participating in U.S. export transactions by any
+    federal agency of the U.S. government; or (c) for use in connection with
+    the design, development or production of nuclear, chemical or
+    biological weapons, or rocket systems, space launch vehicles, or
+    sounding rockets, or unmanned air vehicle systems. You may not download this software or
+    technical information if you are located in one of these countries or
+    otherwise subject to these restrictions. You may not provide this
+    software or technical information to individuals or entities located in
+    one of these countries or otherwise subject to these restrictions.
+    You are also responsible for compliance with foreign law requirements
+    applicable to the import, export and use of this software and
+    technical information.
