--- a/site/app/stylesheets/_community.scss
+++ b/site/app/stylesheets/_community.scss
@@ -466,4 +466,34 @@ html.js fieldset.collapsible .fieldset-wrapper {
 #toc td { font-size: 90%; }
 #toc td ul { list-style: none; margin: 0 0 0 9px; }
 
+/* Events */
+ul.forum-navigation-links {
+     list-style: none outside none;
+     margin: 0 0 20px 0;
+}
+
+ul.forum-navigation-links li {
+     display: inline;
+     font-weight: bold;
+     padding: 0 20px 0 0;
+}
+
+ul.forum-navigation-links li:first-child:after {
+     border-right: 1px solid #666;
+     content: "";
+     padding-right: 20px;
+}
+
+.view-event-view .views-row-first {
+	border-top: 5px solid #aaa;
+}
+.view-event-view .views-row {
+     border-bottom: 1px solid #DDD;
+     padding: 20px 15px;
+}
+
+.view-event-view .views-row:hover {
+	background-color: #f5f5f5;
+}
+
 
