--- a/site/app/views/layouts/_head.html.haml
+++ b/site/app/views/layouts/_head.html.haml
@@ -9,7 +9,7 @@
   - if content_for?(:page_title)
     = yield :page_title
     |
-  OpenShift by Red Hat
+  OpenShift
   
 %meta{ :name => "description", :content => "" }/
 %meta{ :name => "author", :content => "" }/
