Community nav column is creating a white bar on iphone

--- a/site/app/stylesheets/_community.scss
+++ b/site/app/stylesheets/_community.scss
@@ -1,5 +1,5 @@
 .community .column-nav .gutter-right {
-  margin-top: 28px;
+  padding-top: 28px;
 }
 
 /* Drupal specific markup, we may want to wrap this with a top level selector on body.drupal or something */
