Rename to make a generic tracking file and tracking JS file Provide query parameters for promo_code on emails Remove warnings on test runs Add test cases for promo code redirect Make it so that a refresh is not required to enter a promo code. Fix failures in test env on mailer.
Remove whitespace

--- a/site/app/views/layouts/console.html.haml
+++ b/site/app/views/layouts/console.html.haml
@@ -51,5 +51,8 @@
 
     = render 'layouts/javascripts'
 
-    -# Omniture code will not load in devenvs to force it to load, just comment out if statement
-    = render('shared/omniture_code', :controller => controller.controller_name, :action => controller.action_name, :event => @event ||= '', :evar8 => @evar8 ||= '') if Rails.env.production?
+    = render('shared/tracking',
+      :controller => controller.controller_name,
+      :action => controller.action_name,
+      :event => @event ||= '',
+      :evar8 => @evar8 ||= '') if Rails.env.production?
