--- a/site/app/views/layouts/_head.html.haml
+++ b/site/app/views/layouts/_head.html.haml
@@ -9,8 +9,8 @@
   - if content_for?(:page_title)
     = yield :page_title
     |
-  OpenShift
-  
+  OpenShift by Red Hat
+
 %meta{ :name => "description", :content => "" }/
 %meta{ :name => "author", :content => "" }/
 
