--- a/site/app/views/shared/_tracking.html.haml
+++ b/site/app/views/shared/_tracking.html.haml
@@ -1,11 +1,8 @@
+= javascript_include_tag 'tracking.js'
+= javascript_include_tag 'omniture/s_code.js'
+
 :plain
-  <!-- SiteCatalyst code version: H.23.3.
-  Copyright 1996-2011 Adobe, Inc. All Rights Reserved
-  More info available at http://www.omniture.com -->
-  <script language="JavaScript" type="text/javascript" src="/app/javascripts/omniture/s_code.js"></script>
   <script language="JavaScript" type="text/javascript"><!--
-  /* You may give each page an identifying name, server, and channel on
-  the next lines. */
   s.pageName="openshift | #{controller} | #{action}"
   s.server=""
   s.channel="#{get_product(controller, action).empty? ? '' : 'OpenShift | Product | ' + get_product(controller, action).capitalize}"
