--- a/site/app/stylesheets/_buttons.scss
+++ b/site/app/stylesheets/_buttons.scss
@@ -19,8 +19,8 @@
   vertical-align: middle;
   //@include buttonBackground($white, darken($white, 10%)); 
   @include border-radius(0); //4px
-  //$shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
-  //@include box-shadow($shadow);
+  $shadow: 0 1px 0 0 rgba(255, 255, 255, 0.5) inset;
+  @include box-shadow($shadow);
   background-image: -moz-linear-gradient(center top , #ddd 10%, #a4a8b0 100%, #c8cad0 100%);
   border-color: rgba(5, 5, 5, 0.1) rgba(5, 5, 5, 0.3) rgba(5, 5, 5, 0.5) rgba(5, 5, 5, 0.3);
   cursor: pointer;
@@ -60,8 +60,8 @@
 // Active state
 .btn:active {
   background-image: none;
-  //$shadow: inset 0 2px 4px rgba(0,0,0,.15), 0 1px 2px rgba(0,0,0,.05);
-  //@include box-shadow($shadow);
+  $shadow: 0 1px 0 0 rgba(255, 255, 255, 0.5) inset;
+  @include box-shadow($shadow);
   background-color: darken($white, 20%);
   background-color: darken($white, 25%) #{"\9"};
   outline: 0;
