--- a/site/app/stylesheets/_variables.scss
+++ b/site/app/stylesheets/_variables.scss
@@ -69,6 +69,7 @@ $ribbonFoldColor:               #91010b; /* FIXME: From screenshots, is this acc
 $takeActionBackground:          #EB0011; /* FIXME: This makes the logo look desaturated.  We may want a different color set for the nav */
 $takeActionHighlightBackground: #91010b;
 
+$grayLighter:										#ededed;
 $grayLight:                     #999;
 $grayDark:                      #2f2f2f;
 $primaryButtonBackground:       #4e9fdd;
